fixed the overflows

--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -1,6 +1,7 @@
 @import "../../global.scss";
 
 .contact {
+  overflow: hidden; 
   background-color: white;
   display: flex;
 
