--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,6 +1,7 @@
 @import "../../global.scss";
 
 .intro {
+  overflow: hidden; 
   background-color: white;
   display: flex;
   color: black;
