--- a/src/global.scss
+++ b/src/global.scss
@@ -9,6 +9,3 @@ $width: 768px;
 }
 
 
-body {
-    overflow: hidden; 
-  } 
